create html elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
+    <head>
+        <h1> Etch-A-Sketch</h1>
+    </head>
+    <div class="customDiv">
+        <h3>Custom your Grid Here! ⏬</h3><br/>
+
+        <label for ="rows">Rows:</label>
+        <input type = "number" name = "rows" id = "rows"><br/>
+
+        <label for ="columns">Columns:</label>
+        <input type = "number" name = "columns" id = "columns"><br/>
+
+        <p> maximum number is 100 each</p>
+
+    </div>
+    <div class ="buttonDiv">
+        <button id = "creatBtn">CREATE</button>
+        <button id = "resetBtn">RESET</button>
+    </div>
+    <div>
+        <div class = "container">
+    </div>
+
 
 
 
