--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </head>
     <div class="customDiv">
         <h3>Custom your Grid Here! ⏬</h3><br/>
-
-        <label for ="rows">Rows:</label>
+        <div class="typeIn">
+        <label id ="gridCustom" for ="rows">Rows:</label>
         <input type = "number" name = "rows" id = "rows"><br/>
 
-        <label for ="columns">Columns:</label>
+        <label id ="gridCustom" for ="columns">Columns:</label>
         <input type = "number" name = "columns" id = "columns"><br/>
-
+        </div>
         <p> maximum number is 100 each</p>
 
     </div>
