crate beard with grid

--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
     <div class="customDiv">
         <h3>Custom your Grid Here! ⏬</h3><br/>
         <div class="typeIn">
-        <label id ="gridCustom" for ="rows">Rows:</label>
-        <input type = "number" name = "rows" id = "rows"><br/>
-
-        <label id ="gridCustom" for ="columns">Columns:</label>
-        <input type = "number" name = "columns" id = "columns"><br/>
-        </div>
-        <p> maximum number is 100 each</p>
+        <input type="text" name="setGrid" id ="setGrid">
+        <button id = "creatBtn">CREATE</button>
+        <div id="messge"></div>
 
     </div>
     <div class ="buttonDiv">
-        <button id = "creatBtn">CREATE</button>
+        <button id = "blackBtn">BLACK</button>
+        <button id = "randomBtn">RANDOM</button>
         <button id = "resetBtn">RESET</button>
     </div>
-    <div>
-        <div class = "container">
-    </div>
+    
+    <div class = "board"> </div>
+   
 
 
 
