add click to draw function

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id = "blackBtn" onclick="setColor('black')">BLACK</button>
         <button id = "randomBtn" onclick="setColor('random')">RANDOM</button>
         <button id = "resetBtn" onclick="resetBoard()">RESET</button>
+        <p id="draw"></p>
     </div>
     
     <div class = "board"> </div>
