add hover for button

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <div id="message"></div>
 
     </div>
-    <div class ="buttonDiv">
+    <div class ="drawSection">
+        <div class ="buttonDiv">
         <button id = "blackBtn" onclick="setColor('black')">BLACK</button>
         <button id = "randomBtn" onclick="setColor('random')">RANDOM</button>
         <button id = "resetBtn" onclick="resetBoard()">RESET</button>
-        <p id="draw"></p>
+        </div><p id="draw"></p>
     </div>
     
     <div class = "board"> </div>
